created and styled a delete button for weather widget no functionality

--- a/src/pages/weather/Weather.css
+++ b/src/pages/weather/Weather.css
@@ -194,6 +194,15 @@ body {
   color: var(--text-color);
 }
 
+.trash-container {
+  display: flex; 
+  justify-content: end;
+}
+
+.trash {
+  color: var(--accent-color)
+}
+
 /* Responsive adjustments */
 @media (max-width: 480px) {
   .weather-info {
