--- a/src/pages/weather/Weather.css
+++ b/src/pages/weather/Weather.css
@@ -203,6 +203,10 @@ body {
   color: var(--accent-color)
 }
 
+.up-down-arrows {
+  display: none;
+}
+
 /* Responsive adjustments */
 @media (max-width: 480px) {
   .weather-info {
@@ -215,5 +219,15 @@ body {
   .weather-footer {
     padding-left: 15px;
     padding-right: 15px;
+  }
+}
+
+@media (max-width: 768px){
+  .up-down-arrows {
+    display: block
+  }
+
+  .left-right-arrows {
+    display: none 
   }
 }
