--- a/src/pages/weather/Weather.css
+++ b/src/pages/weather/Weather.css
@@ -195,16 +195,35 @@ body {
 }
 
 .trash-container {
-  display: flex; 
-  justify-content: end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.trash {
-  color: var(--accent-color)
+.bright-hover:hover{
+  filter: brightness(2)
+}
+
+.move-arrows {
+  display: flex; 
+  align-items: center;
 }
 
 .up-down-arrows {
   display: none;
+}
+
+.left-right-arrows {
+  display: flex; 
+  flex-direction: row;
+  align-items: center;
+}
+
+.actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--accent-color)
 }
 
 /* Responsive adjustments */
@@ -224,7 +243,13 @@ body {
 
 @media (max-width: 768px){
   .up-down-arrows {
-    display: block
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  .actions {
+    margin-bottom: 1rem;
   }
 
   .left-right-arrows {
