completed nav bar functionality
page now switches

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,6 @@
 .navbar-container {
     margin: 0; 
-    padding-top: 2rem; 
-    padding-bottom: 2rem;
+    padding: 2rem 5rem 2rem 5rem; 
 
     background: linear-gradient(to right, #1B263B, #273B54);
 
