--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,24 @@
 .navbar-container {
     margin: 0; 
-    padding: 2rem 5rem 2rem 5rem; 
+    padding: 0.5rem 5rem 0.5rem 5rem; 
 
     background: linear-gradient(to right, #1B263B, #273B54);
 
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 
                 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
+}
+
+.navbar-btn {
+    margin: 1rem; 
+    color: var(--accent-color); 
+    transition: color 0.3s ease-in-out;
+}
+
+.navbar-btn:hover{
+    color: #e4effd;
+}
+
+.navbar-icon {
+    width: 3rem; 
+    height: auto;
 }
