--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,8 +6,8 @@ body {
     flex-direction: column;
     align-items: center; 
     width: 100%; 
-    max-width: 1200px; /* Optional: limits width on large screens */
-    margin: 0 auto; /* Centers the container */
+    max-width: 1200px;
+    margin: 0 auto; 
 }
 .MainText {
     display: flex;
@@ -47,7 +47,12 @@ body {
     color: #7393B3;
     margin-right: 10px;
 }
-
+.Feels-like-Text {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: white;
+    margin-right: 10px;
+}
 .CurrentTemp {
     font-size: 3em; 
     font-weight: bold;
