--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -57,17 +57,35 @@ body {
     font-size: 3em; 
     font-weight: bold;
 }
-.temp-options {
+
+.TempOptions {
     display: flex;
-    margin-left: 10px; 
-    font-size: 1.2em;
+    align-items: center;
+    gap: 8px;
+    margin-left: 10px;
+  }
+  
+  .TempOptions button {
+    background: none;
+    border: none;
+    font-size: 1.2rem;
+    cursor: pointer;
+    padding: 2px 8px;
+    border-radius: 4px;
+    transition: all 0.2s ease;
+    color: grey;/* inactive color */
+  }
+  
+  .TempOptions button.active {
+    color: #ffffff !important; /* Active color */
     font-weight: bold;
-    color: #7393B3;
-}
-.temp-options li {
-    margin-left: 10px; 
-    
-}
+    text-shadow: 0 0 5px #ffffff
+  }
+  
+  .TempOptions li:nth-child(2) {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.2rem;
+  }
 
 
 .Weather-conditions ul {
