--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
 }
+
 .home-container{
     display: flex;
     flex-direction: column;
@@ -9,6 +10,7 @@ body {
     max-width: 1200px;
     margin: 0 auto; 
 }
+
 .MainText {
     display: flex;
     justify-content: center;
@@ -31,6 +33,7 @@ body {
     height: 100px;
     color: white;
 }
+
 .home-temperature {
     display: flex;
     justify-content: center; 
@@ -47,6 +50,7 @@ body {
     color: #7393B3;
     margin-right: 10px;
 }
+
 .Feels-like-Text {
     font-size: 1.5em;
     font-weight: bold;
@@ -57,6 +61,7 @@ body {
     font-size: 3em; 
     font-weight: bold;
 }
+
 
 .TempOptions {
     display: flex;
@@ -180,6 +185,7 @@ body {
     align-items: center; 
     gap: 10px; 
 }
+
 @media (max-width: 1450) {
     .home-temperature {
         flex-direction: column; 
@@ -251,4 +257,76 @@ body {
     .Hourly-forecast-name {
         font-size: 0.5em; 
     }
+
+
+.weekly-forecast  {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+} */
+
+h2 {
+    display: flex;
+    align-items: center; 
+    gap: 10px;
+    color: white 
+}
+
+ .Weather-conditions-icons {
+    width: 30px; 
+    height: 30px; 
+    object-fit: contain; 
+ }
+
+.Weekly-forecast-name{
+    color: white;
+ 
+}
+
+
+.Weather-conditions-icons {
+    width: 50px;  
+    height: 50px; 
+    text-align: left;
+}
+
+.Weekly-forecast-header {
+    display: flex;              
+    align-items: center;      
+    gap: 10px; 
+    font-size: 0.65em;            
+}
+
+.Weather-icon {
+    width: 30px;              
+    height: 30px;              
+}
+
+.Weekly-forecast-name {
+    color: white;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.Weather-icon{
+    width: 70px;
+    height: 60px;
+
+}
+
+.weekly-forecast {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; 
+    gap: 20px; 
+    margin-left: 77px;
+
+}
+
+
+
 }
