--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -140,6 +140,7 @@ body {
     border-radius: 20px;
     width: 70%; 
     text-align: center;
+    
 }
 .Hourly-forecast ul {
     display: flex;
@@ -151,6 +152,7 @@ body {
     justify-content: center;
     gap: 20px;
     width: 100%;
+    
 }
 .Hourly-forecast li {
     display: flex;
@@ -159,6 +161,7 @@ body {
     justify-content: center;
     gap: 10px; 
     min-width: 80px; 
+    
 }
 .Hourly-forecast ul img {
     width: 40px; 
@@ -247,7 +250,7 @@ body {
         font-size: 0.8em; 
     }
 }
-@media (max-width: 600px){
+@media (max-width: 600px) {
     .Feels-Like {
         font-size: 0.4em; 
     }
@@ -257,7 +260,7 @@ body {
     .Hourly-forecast-name {
         font-size: 0.5em; 
     }
-
+}
 
 .weekly-forecast  {
     list-style-type: none;
@@ -276,57 +279,78 @@ h2 {
     color: white 
 }
 
- .Weather-conditions-icons {
-    width: 30px; 
-    height: 30px; 
-    object-fit: contain; 
- }
-
-.Weekly-forecast-name{
-    color: white;
- 
-}
-
 
 .Weather-conditions-icons {
     width: 50px;  
     height: 50px; 
-    text-align: left;
+    text-align: center;
+    object-fit: contain; 
 }
 
 .Weekly-forecast-header {
-    display: flex;              
-    align-items: center;      
-    gap: 10px; 
-    font-size: 0.65em;            
-}
-
-.Weather-icon {
-    width: 30px;              
-    height: 30px;              
-}
-
-.Weekly-forecast-name {
-    color: white;
+    display: flex;
+    align-items: center;
+    gap: 15px;
     font-size: 1.5em;
     font-weight: bold;
+    color: white;
+    margin-bottom: -20px;
+    margin-left: -400px;
+    
 }
 
-.Weather-icon{
+
+.Weekly-forecast-name {
+    font-size: 0.72em;
+    font-weight: bold;
+    color: white;
+}
+
+
+.Weather-icon {
     width: 70px;
     height: 60px;
-
+    object-fit: contain;
 }
+
 
 .weekly-forecast {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 20px;
+    overflow-x: auto;
+    margin-top: 20px;
+}
+
+
+.daily-forecast {
+    display: flex;
+    flex-direction: column;
     align-items: center; 
-    gap: 20px; 
-    margin-left: 77px;
+    text-align: center;
+    width: 120px; 
+}
+
+
+.daily-forecast p {
+    font-size: 1em;
+    margin: 2px 0;
 
 }
 
+
+@media (max-width: 768px) {
+    .weekly-forecast {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+   
+    .Weather-icon {
+        width: 50px; 
+        height: 50px;
+    }
 
 
 }
