--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -270,12 +270,13 @@ h2 {
     color: white 
 }
 
- .Weather-conditions-icons {
-    width: 30px; 
-    height: 30px; 
+.Weather-conditions-icons {
+    width: 50px;  
+    height: 50px; 
+    text-align: left;
+    text-align: center;
     object-fit: contain; 
- }
-
+}
 .Weekly-forecast-name{
     color: white;
  
@@ -289,11 +290,16 @@ h2 {
 }
 
 .Weekly-forecast-header {
-    display: flex;              
-    align-items: center;      
-    gap: 10px; 
-    font-size: 0.65em;            
-}
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: white;
+    margin-bottom: -20px;
+    margin-left: -400px;
+    
+}         
 
 .Weather-icon {
     width: 30px;              
@@ -302,21 +308,40 @@ h2 {
 
 .Weekly-forecast-name {
     color: white;
-    font-size: 1.5em;
+    font-size: 0.72em;
     font-weight: bold;
 }
 
 .Weather-icon{
     width: 70px;
     height: 60px;
-
+    object-fit: contain; 
 }
 
 .weekly-forecast {
     display: flex;
-    justify-content: flex-start;
-    align-items: center; 
-    gap: 20px; 
-    margin-left: 77px;
+    justify-content: space-evenly;
+    align-items: center;
+    overflow-x: auto;
+    text-align: center;
+    width: 120px; 
+}
 
+
+.daily-forecast p {
+    font-size: 1em;
+    margin: 2px 0;
+
+}
+
+@media (max-width: 768px) {
+    .weekly-forecast {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .Weather-icon {
+        width: 50px; 
+        height: 50px;
+    }
 }
