--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
 }
+
 .home-container{
     display: flex;
     flex-direction: column;
@@ -9,6 +10,7 @@ body {
     max-width: 1200px;
     margin: 0 auto; 
 }
+
 .MainText {
     display: flex;
     justify-content: center;
@@ -31,6 +33,7 @@ body {
     height: 100px;
     color: white;
 }
+
 .home-temperature {
     display: flex;
     justify-content: center; 
@@ -47,6 +50,7 @@ body {
     color: #7393B3;
     margin-right: 10px;
 }
+
 .Feels-like-Text {
     font-size: 1.5em;
     font-weight: bold;
@@ -57,6 +61,7 @@ body {
     font-size: 3em; 
     font-weight: bold;
 }
+
 
 .TempOptions {
     display: flex;
@@ -135,6 +140,7 @@ body {
     border-radius: 20px;
     width: 70%; 
     text-align: center;
+    
 }
 .Hourly-forecast ul {
     display: flex;
@@ -146,6 +152,7 @@ body {
     justify-content: center;
     gap: 20px;
     width: 100%;
+    
 }
 .Hourly-forecast li {
     display: flex;
@@ -154,6 +161,7 @@ body {
     justify-content: center;
     gap: 10px; 
     min-width: 80px; 
+    
 }
 .Hourly-forecast ul img {
     width: 40px; 
@@ -180,6 +188,7 @@ body {
     align-items: center; 
     gap: 10px; 
 }
+
 @media (max-width: 1450) {
     .home-temperature {
         flex-direction: column; 
@@ -241,7 +250,7 @@ body {
         font-size: 0.8em; 
     }
 }
-@media (max-width: 600px){
+@media (max-width: 600px) {
     .Feels-Like {
         font-size: 0.4em; 
     }
@@ -270,23 +279,12 @@ h2 {
     color: white 
 }
 
+
 .Weather-conditions-icons {
     width: 50px;  
     height: 50px; 
-    text-align: left;
     text-align: center;
     object-fit: contain; 
-}
-.Weekly-forecast-name{
-    color: white;
- 
-}
-
-
-.Weather-conditions-icons {
-    width: 50px;  
-    height: 50px; 
-    text-align: left;
 }
 
 .Weekly-forecast-header {
@@ -299,30 +297,37 @@ h2 {
     margin-bottom: -20px;
     margin-left: -400px;
     
-}         
-
-.Weather-icon {
-    width: 30px;              
-    height: 30px;              
 }
+
 
 .Weekly-forecast-name {
-    color: white;
     font-size: 0.72em;
     font-weight: bold;
+    color: white;
 }
 
-.Weather-icon{
+
+.Weather-icon {
     width: 70px;
     height: 60px;
-    object-fit: contain; 
+    object-fit: contain;
 }
+
 
 .weekly-forecast {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
+    gap: 20px;
     overflow-x: auto;
+    margin-top: 20px;
+}
+
+
+.daily-forecast {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
     text-align: center;
     width: 120px; 
 }
@@ -334,14 +339,18 @@ h2 {
 
 }
 
+
 @media (max-width: 768px) {
     .weekly-forecast {
         flex-direction: column; 
         align-items: center; 
     }
 
+   
     .Weather-icon {
         width: 50px; 
         height: 50px;
     }
+
+
 }
